Fix lists overflows (#331)

--- a/assets/sb-admin/css/components/_tables.scss
+++ b/assets/sb-admin/css/components/_tables.scss
@@ -1,5 +1,5 @@
 .table-responsive {
-    overflow-x: initial;
+    overflow-x: auto;
 
     th {
         vertical-align: middle;
