--- a/assets/sb-admin/css/components/navs/_sidebar.scss
+++ b/assets/sb-admin/css/components/navs/_sidebar.scss
@@ -14,8 +14,6 @@ $icon-width: 32px;
         min-height: 100vh;
         padding-left: 0;
         list-style-type: none;
-        overflow-x: hidden;
-        overflow-y: auto;
     }
 
     .nav-item {
